--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         scrollbar-width: none;  /* Firefox */
       }
     </style>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="importmap">
 {
   "imports": {
@@ -54,7 +55,7 @@
 </head>
   <body class="bg-slate-100">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="text/babel" data-type="module" data-presets="react,typescript" src="./index.tsx"></script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
